# telegram_voice_transciber

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/bot/: bot_init.py  messages.py  models.py
src/bot/handlers/: __init__.py  forward.py  payment.py  util.py  voice.py
src/bot/management/commands/: runbot.py
src/bot/migrations/: 0001_initial.py
src/bot/services/: db.py  file_processor.py  transcribe.py
src/bot/tests/: edge_cases_tests.py  transcription_tests.py  user_and_payment_tests.py
src/config/: settings.py
